<resources>
    <string name="app_name">Mascotas</string>
    <string name="login_name">Sign in</string>
    <string name="register_name">Sign up</string>
    <string name="wlc_sign_in">Welcome back, sign in</string>
    <string name="wlc_sign_up">Sign up to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_member">Already have an account, Sign in</string>
    <string name="dont_have">Don\'t have an account, Sign up</string>
    <string name="username">Username</string>
    <string name="registrate">Regístrate</string>
    <string name="Agregaunamascota">Agrega una Mascota!</string>
    <string name="spn_title">Elige Especie</string>
    <string name="nombreMascota">Nombre de la Mascota</string>
    <string name="raza">Raza</string>
    <string name="nacimiento">Año de nacimiento</string>
    <string name="comida">Alimento mascota</string>
    <string name="btn_agregar">Agregar Mascota</string>
    <string name="Agregar_Vacunas">Agrega Vacunas</string>
    <string name="nombre_vacuna">Nombre de la Vacuna</string>
    <string name="Fecha_vacunacion">Fecha de Vacunacion</string>
    <string name="btnaddVacuna">Agregar Vacuna</string>
    <string name="nombre_vet">Nombre del Veterinario</string>
    <string name="nombre_consulta">Nombre Consulta Vet</string>
    <string name="spn_tipoAtencion">Tipo de Atención</string>
    <string name="Observaciones">Observaciones</string>
    <string name="Fecha_visita">Fecha Visita Veterinaria</string>
    <string name="Agregar_visita">Agregar Visita Veterinaria</string>
    <string name="btn_agregarvet">Agregar Visita</string>
    <string name="quien">¿Quién?</string>
    <string name="donde">¿Dónde?</string>
    <string name="cuando">¿Cuándo?</string>
    <string-array name="especies_array">
        <item>Perro</item>
        <item>Gato</item>
        <item>Pájaro</item>
        <item>Otros</item>
    </string-array>
    <string-array name="atencion_array">
        <item>Control</item>
        <item>Urgencia</item>
        <item>Enfermedad</item>
        <item>Otros</item>
    </string-array>

</resources>